# pysheeet

./: .clang-format  .gitattributes  CITATION.cff  LICENSE  Makefile  Procfile  README.rst  app.py  app_test.py  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: pythonpackage.yml
docs/: 404.rst  conf.py  index.rst
docs/_extra/: robots.txt
docs/_static/: style.css
docs/_templates/: carbonad.html  layout.html
docs/appendix/: python-concurrent.rst
docs/notes/: python-concurrency.rst  python-new-py3.rst  slurm.rst
docs/notes/appendix/: disaggregated-prefill-decode.rst  index.rst  megatron-efa-monitoring.rst  nccl-gin.rst  nvshmem-multi-nic.rst  python-asyncio.rst  python-concurrent.rst  python-gdb.rst  python-walrus.rst
docs/notes/asyncio/: index.rst  python-asyncio-advanced.rst  python-asyncio-basic.rst  python-asyncio-guide.rst  python-asyncio-server.rst
docs/notes/basic/: index.rst  python-basic.rst  python-dict.rst  python-func.rst  python-future.rst  python-generator.rst  python-heap.rst  python-list.rst  python-object.rst  python-rexp.rst  python-set.rst  python-typing.rst  python-unicode.rst
docs/notes/concurrency/: index.rst  (+3 more)
skills/py/: SKILL.md
skills/readable-py/: SKILL.md
src/basic/: asyncio_.py  basic.py  cext_.py  concurrency_.py  crypto_.py  datetime_.py  dict.py  fileio_.py  func.py  future_.py  generator.py  heap.py  list.py  object.py  os_.py  rexp.py  set.py  socket_.py  sqlalchemy_core.py  sqlalchemy_orm.py  sqlalchemy_query.py  typing_.py  unicode_.py
src/cext/: CMakeLists.txt  README.md  conftest.py  example.cpp  fib.c  gil_example.cpp  numpy_example.cpp  setup.py  test_cext.py  vector.cpp
src/cext/capi/: args.c  errors.c  gil.c  setup.py  simple.c  test_capi.py  types_demo.c
src/cpp_from_python/: CMakeLists.txt  cpp_from_py.cpp
src/gin/: Dockerfile  Makefile  run.enroot  run.sbatch
src/megatron/: Dockerfile  Makefile  README.md  enroot.sh  entrypoint.py  srun.sh  viztracer_plugin.py
src/new_py3/: py3.py
src/nixl/: Dockerfile  Makefile  bench.sh  nixl.sbatch  vllm.sbatch
src/ray/: Dockerfile  ray.sbatch
src/security/: vulnerability_.py
(+80 files in other folders)
